<resources>
    <string name="app_name">TeknoVaris</string>
    <string name="ok">OK</string>
    <string name="close">Tutup</string>
    <string name="tv_cancel">Batal</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="edit">Edit</string>
    <string name="view">Lihat</string>
    <string name="delete">Hapus</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="skip">Lewati</string>
    <string name="finish">Selesai</string>
    <string name="search">Cari...</string>
    <string name="processing">Memproses...</string>
    <string name="select_option">Pilih Opsi!</string>
    <string name="to">sampai</string>
    <string name="status">Status:</string>
    <string name="count">Jumlah</string>
    <string name="add">Tambah</string>
    <string name="condition">Kondisi</string>
    <string name="success">Sukses</string>
    <string name="success_message">Operasi berhasil dilakukan</string>
    <string name="warning">Peringatan</string>
    <string name="warning_message">Pesan peringatan disini</string>
    <string name="danger">Bahaya</string>
    <string name="danger_message">Terjadi kesalahan. Silakan coba lagi</string>
    <string name="login_title">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Masuk</string>
    <string name="no_account_prompt">Belum punya akun? Hubungi Admin</string>
    <string name="welcome_admin">Selamat Datang Admin</string>
    <string name="add_item">Tambah Item</string>
    <string name="scan_return">Scan Pengembalian</string>
    <string name="borrowing_status">Status Peminjaman</string>
    <string name="in_use">Sedang Digunakan</string>
    <string name="item_name">Nama Item</string>
    <string name="item_code">Kode Item</string>
    <string name="tool_name">Nama Alat</string>
    <string name="item_type">Jenis Item</string>
    <string name="all_items">Semua Item</string>
    <string name="description">Deskripsi</string>
    <string name="type_a">Tipe A</string>
    <string name="items_count">5 Item</string>
    <string name="example_item_name">Contoh: Proyektor Epson</string>
    <string name="enter_admin_name">Masukkan Nama Admin</string>
    <string name="enter_borrow_date">Masukkan Tanggal Pinjam</string>
    <string name="borrow_item">Pinjam Item</string>
    <string name="borrowing_code">Kode Peminjaman:</string>
    <string name="date_borrowed">Tanggal Dipinjam:</string>
    <string name="borrowing_hours">Jam Peminjaman:</string>
    <string name="start_hours">Jam Mulai</string>
    <string name="end_hours">Jam Selesai</string>
    <string name="student_name">Nama Mahasiswa:</string>
    <string name="admin_name">Nama Admin:</string>
    <string name="last_location">Lokasi Terakhir:</string>
    <string name="return_time">Waktu Pengembalian:</string>
    <string name="timer_title">Timer</string>
    <string name="attention">Perhatian!</string>
    <string name="return_reminder">Mohon kembalikan alat setelah digunakan, dan jangan bawa alat keluar area kampus!</string>
    <string name="change_password_title">Ganti Password</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfirmasi Password Baru</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="welcome_user">Selamat Datang Pengguna</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="confirmation_message">Pesan konfirmasi disini</string>
    <string name="onboarding_title">Judul Onboarding</string>
    <string name="welcome_image">Gambar Selamat Datang</string>
    <string name="onboarding_description">Deskripsi onboarding disini</string>
    <string name="onboarding_title_1">Selamat Datang di Aplikasi Peminjaman Inventaris Teknik Informatika!</string>
    <string name="onboarding_desc_1">Aplikasi ini memudahkan Anda untuk meminjam peralatan penting seperti infokus, proyektor, dan alat lainnya untuk menunjang kegiatan di jurusan kami.</string>
    <string name="onboarding_title_2">Pilih Barang yang Ingin Dipinjam!</string>
    <string name="onboarding_desc_2">Cari dan pilih barang yang Anda butuhkan, seperti infokus atau alat peraga lainnya, lalu tentukan waktu peminjaman yang sesuai.</string>
    <string name="onboarding_title_3">Konfirmasi dan Pengembalian Barang</string>
    <string name="onboarding_desc_3">Setelah selesai menggunakan barang, Anda dapat mengatur pengembalian sesuai jadwal dan pastikan barang kembali dalam kondisi baik.</string>
    <string name="permission_required_message">Aplikasi membutuhkan izin %1$s untuk melanjutkan.</string>
    <string name="permission_manual_enable_message">Izin %1$s dibutuhkan agar aplikasi berjalan dengan baik. Aktifkan secara manual di Pengaturan.</string>
    <string name="logout_message">Yakin ingin logout?</string>
    <string name="item_not_found">Item dengan kode \'%1$s\' tidak ditemukan.</string>
    <string name="camera_permission_denied">Izin kamera ditolak</string>
    <string name="item_in_use">Item sedang dipinjam dan belum dikembalikan</string>
    <string name="scan_timeout">Pemindaian kedaluwarsa. Silakan coba lagi.</string>
    <string name="image_processing_failed">Gagal memproses gambar: %1$s</string>
    <string name="flash_button">Tombol lampu kilat</string>
    <string name="unsaved_changes_close">Anda memiliki perubahan yang belum disimpan. Yakin ingin menutup?</string>
    <string name="unsaved_changes_cancel">Anda memiliki perubahan yang belum disimpan. Yakin ingin membatalkan?</string>
    <string name="save_confirmation">Apakah Anda yakin ingin menyimpan perubahan ini?</string>
    <string name="save_success">Borrowing berhasil diperbarui</string>
    <string name="no_permission_to_edit">Anda tidak memiliki izin untuk mengubah data</string>
    <string name="delet_confimation">Yakin ingin menghapus peminjaman ini?</string>
    <string name="delet_succes">Peminjaman berhasil dihapus</string>
    <string name="student_phone_number">Nomor Telepon Siswa</string>
    <string name="admin_phone_number">Nomor Telepon Admin</string>
    <string name="call_student">Hubungi Siswa</string>
    <string name="call_admin">Hubungi Admin</string>
    <string name="open_map">Buka Peta</string>
    <string name="no_phone_number">Nomor telepon tidak tersedia.</string>
    <string name="invalid_coordinates">Koordinat tidak valid.</string>
    <string name="no_app_to_handle">Tidak ada aplikasi yang dapat menangani tindakan ini.</string>
    <string name="select_contact_method">Pilih Metode Kontak</string>
    <string name="call">Telepon</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="last_location_not_available">Lokasi terakhir tidak tersedia.</string>
    <string name="open_map_with">Buka Peta dengan</string>
    <string name="camera_permission_denied_to_qr">Izin kamera diperlukan untuk memindai kode QR</string>
    <string name="return_success">Barang berhasil dikembalikan</string>
    <string name="item_already_returned">Barang ini sudah berstatus Dikembalikan</string>
    <string name="scan_failed">Gagal scan: %1$s</string>
    <string name="item_registered_not_borrowed">Barang dengan ID \'%1$s\' terdaftar, tetapi tidak sedang dipinjam.</string>
    <string name="item_not_registered">Barang dengan ID \'%1$s\' tidak terdaftar.</string>
    <string name="return_success_item_available">Barang berhasil dikembalikan dan status item diubah ke \'Available\'</string>
    <string name="return_success_item_update_failed">Status pengembalian berhasil, tapi gagal update status item</string>
    <string name="borrowing_update_failed">Gagal update status peminjaman</string>
    <string name="scan_expired">Pemindaian kedaluwarsa. Silakan coba lagi.</string>
    <string name="item_already_exists">Item dengan ID \'%1$s\' sudah ada</string>
    <string name="item_save_success">Item berhasil disimpan</string>
    <string name="item_save_failed">Gagal menyimpan item</string>
    <string name="all_fields_required">Semua field harus diisi</string>
    <string name="item_id_required">ID item harus diisi</string>
    <string name="item_name_required">Nama item harus diisi</string>
    <string name="item_type_required">Tipe item harus diisi</string>
    <string name="item_status_required">Status item harus diisi</string>
    <string name="add_item_confirmation">Apakah Anda yakin ingin menambahkan item ini?</string>
    <string name="unsaved_changes_discard">Anda memiliki perubahan yang belum disimpan. Yakin ingin membatalkan?</string>
    <string name="item_update_success">Item berhasil diperbarui</string>
    <string name="no_permission_to_edit_item">Anda tidak memiliki izin untuk mengubah data item</string>
    <string name="confirm_save_changes">Apakah Anda yakin ingin menyimpan perubahan?</string>
    <string name="confirm_delet">Yakin ingin menghapus item ini?</string>
    <string name="delet_item_succes">Item berhasil dihapus</string>
    <string name="title_change_password">Password berhasil diubah</string>
    <string name="success_change_password">Silakan login kembali dengan password baru</string>
    <string name="failed">Gagal</string>
    <string name="failed_change_password">Gagal mengubah password. Silakan coba lagi.</string>
    <string name="need_change_password">Anda perlu mengganti password terlebih dahulu</string>
    <string name="login_success">Login berhasil</string>
    <string name="login_failed">Login gagal</string>
    <string name="first_login">Ini adalah login pertama Anda. Silakan ganti password terlebih dahulu.</string>
    <string name="find_your_stuff">Temukan Barang Yang Ingin Dipinjam</string>
    <string name="failed_login">Username atau password salah</string>
    <string name="cant_find_item">Item tidak ditemukan atau tidak tersedia</string>
    <string name="success_save_borrow">Data peminjaman disimpan</string>
    <string name="failed_save_borrow">Gagal menyimpan data peminjaman \'%1$s\'</string>
    <string name="cant_borrow_weekend">Tidak bisa memilih hari Sabtu atau Minggu</string>
    <string name="hour_star_fail">Jam mulai tidak valid</string>
    <string name="hour_end_fail">Jam selesai tidak valid</string>
    <string name="error_start_time_earliest">Jam mulai paling cepat 07:30</string>
    <string name="error_start_time_latest">Jam mulai paling lambat 18:00 (hanya 18:00)</string>
    <string name="error_start_time_range">Jam mulai harus antara 07:30 hingga 18:00</string>
    <string name="error_end_time_earliest">Jam akhir paling cepat 07:30</string>
    <string name="error_end_time_latest">Jam akhir paling lambat 18:00 (hanya 18:00)</string>
    <string name="error_end_time_range">Jam akhir harus antara 07:30 hingga 18:00</string>
    <string name="error_end_before_start">Jam akhir harus lebih dari jam mulai</string>
    <string name="error_min_duration">Durasi peminjaman minimal 30 menit</string>
    <string name="borrowing">Peminjaman</string>
    <string name="item">Barang</string>
    <string name="password_min_length_error">Password minimal 8 karakter</string>
    <string name="new_password_empty_error">Password baru tidak boleh kosong</string>
    <string name="confirm_password_empty_error">Konfirmasi password tidak boleh kosong</string>
    <string name="confirm_password_mismatch_error">Konfirmasi tidak cocok dengan password baru</string>
    <string name="password_unchanged_title">Password Tidak Berubah!</string>
    <string name="password_unchanged_message">Password baru tidak boleh sama dengan yang lama</string>
    <string name="change_phone_number_title_placeholder">Ganti Nomor Telepon</string>
    <string name="hint_phone_number">Nomor Telepon</string>
    <string name="menu_change_password">Ganti Password</string>
    <string name="menu_change_phone_number">Ganti Nomor Telepon</string>
    <string name="menu_logout">Keluar</string>
</resources>