<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <View
            android:id="@+id/itemCodeInvisible"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/poppins"
            android:enabled="false"
            android:layout_marginTop="16dp" />

        <AutoCompleteTextView
            android:id="@+id/etAdminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_admin_name"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"
            android:inputType="none" />

        <EditText
            android:id="@+id/etDateBorrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_borrow_date"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"
            android:focusable="false" />

        <LinearLayout
            android:id="@+id/lyBorrowingHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/etStartHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/start_hours"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/poppins"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:fontFamily="@font/poppins"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp" />

            <EditText
                android:id="@+id/etEndHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/end_hours"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/poppins"
                android:focusable="false" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btnBowrowItem"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_primary"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/borrow_item" />
    </LinearLayout>
</LinearLayout>
