<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/dialog_rounded_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/item_code"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etItemCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edittext_outline"
            android:fontFamily="@font/poppins"
            android:hint="@string/item_code"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etToolName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edittext_outline"
            android:fontFamily="@font/poppins"
            android:hint="@string/tool_name"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/item_type"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edittext_outline"
            android:fontFamily="@font/poppins"
            android:hint="@string/type_a"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edittext_outline"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.widget.Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_cancle"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <android.widget.Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>