<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_background"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:text="@string/menu_change_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/colorOnDisabled" />

    <TextView
        android:id="@+id/tvChangePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:text="@string/menu_change_phone_number"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/colorOnDisabled" />

    <android.widget.Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_cancle"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/menu_logout"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>