<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.ChangePhoneNumberActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/changePhoneNumberCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvChangePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingTop="20dp"
                android:text="@string/change_phone_number_title_placeholder"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:textColor="#000"
                    android:textColorHighlight="#4F85BA"
                    android:textCursorDrawable="@drawable/custom_cursor" />
            </androidx.cardview.widget.CardView>

            <android.widget.Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_button_primary"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>